<resources>
    <string name="app_name">Voice Equal</string>
    <string name="enter_count_text">Enter No.</string>
    <string name="save">Save</string>
    <string name="women">WOMEN</string>
    <string name="men">MEN</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="show_results">See Result</string>
    <string name="results">Result</string>
    <string name="reset_results">Reset Results</string>
    <string name="women_men_count_title">Women/Men Count</string>
    <string name="women_men_time_text">Women/Men Time</string>
    <string name="women_title">WOMEN:</string>
    <string name="men_text">MEN:</string>
    <string name="counter_title_edit">How many people are there?</string>
    <string name="counter_title">NUMBER OF PEOPLE</string>
    <string name="empty_text"></string>
    <string name="zero">0</string>
    <string name="edit_counter">Edit Counter Button</string>
    <string name="total_duration">Total duration</string>
    <string name="initial_counter">00:00</string>
    <string name="reset_button_desc">Reset Button</string>
    <string name="reset">Reset</string>
    <string name="start_timer">Start Timer</string>
    <string name="women_pause_button">Women Timer Pause Button</string>
    <string name="men_pause_button">Men Timer Pause Button</string>
    <string name="back_button">Back button</string>
    <string name="headcount">headcount</string>
    <string name="time">Time</string>
    <string name="restart_button">Restart</string>
    <string name="women_results_text">%d% of speakers were women and they spoke %d% of the total time</string>
    <string name="men_results_text">%d% of speakers were men and they spoke %d% of the total time</string>
</resources>