<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/counter_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/counter_background"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/counter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/counter_title"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_women_count"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:hint="@string/empty_text"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textAlignment="center"
            android:textCursorDrawable="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/women_title_text"
            app:layout_constraintTop_toBottomOf="@+id/counter_title" />

        <TextView
            android:id="@+id/women_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/women_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/edit_women_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_women_count" />

        <TextView
            android:id="@+id/men_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/men_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/edit_men_count"
            app:layout_constraintEnd_toStartOf="@+id/edit_men_count"
            app:layout_constraintTop_toTopOf="@+id/edit_men_count" />

        <EditText
            android:id="@+id/edit_men_count"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/white"
            android:hint="@string/empty_text"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textAlignment="center"
            android:textCursorDrawable="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/counter_title" />

        <Button
            android:id="@+id/save_count"
            android:layout_width="67dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/save_button"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/counter_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_women_count" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>